--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -20,3 +20,22 @@
 .App-link {
   color: #09d3ac;
 }
+
+html, body {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background-color:#eef5f7;
+}
+
+.form-wrapper {
+  background-color: #869cb3;
+}
