--- a/FrontEnd/src/PostModal.css
+++ b/FrontEnd/src/PostModal.css
@@ -8,30 +8,19 @@
     padding-top: 2rem;
   }
 
-  .modal-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1050;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    outline: 0;
-  }
 
   .modal-footer{
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
   }
-  
+
   .modal {
     z-index: 100;
     background: white;
     position: relative;
     margin: 1.75rem auto;
     border-radius: 3px;
-    max-width: 700px;
+    width: 500px;
     padding: 2rem;
     border-style: solid;
     border-width: 2px;
@@ -43,17 +32,6 @@
     display: flex;
     justify-content: left;
     margin:auto;
-  }
-
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1040;
-    width: 100vw;
-    height: 100vh;
-    background-color: #000;
-    opacity: .5;
   }
   
   button {
