--- a/FrontEnd/src/css/FandomModal.css
+++ b/FrontEnd/src/css/FandomModal.css
@@ -1,4 +1,9 @@
-
+  .formControl{
+      margin: 0;
+      fullWidth: true;
+      display: flex;
+      wrap: nowrap;
+   }
   .h1{
     text-align: left;
     padding-top: 2rem;
@@ -17,7 +22,8 @@
 
   .modal-footer{
     display: flex;
-    justfy-content: center;
+    flex-direction: row;
+    justify-content: flex-end;
     padding-top: 30px;
     padding-bottom: 30px;
   }
